--- a/app/styles/partials/_projects.scss
+++ b/app/styles/partials/_projects.scss
@@ -1,33 +1,26 @@
 section.projects {
   position: relative;
+  background: $color-base;
+  @include outer-container;
+  padding: 0 2rem 2rem 2rem;
 }
 
 .project {
   float: left;
   background: blue;
   //margin: 2rem;
-  margin: 0;
   padding: 3rem;
   position: relative;
-  transition: all 1.5s ease-in-out;
-  @include media($grandkid){
-    margin: 1rem auto;
-    margin: 0;
-    width: 100%;
-    height: 10rem;
-  }
+  //transition: all 1.5s ease-in-out;
+  @include span-columns(12);
+  width: 100%;
+  padding: 2rem;
+  margin-top: 2rem;
   @include media($daughter){
-    height: 10rem;
-    //@include span-columns(6);
-    &:nth-child(3), &:nth-child(5){
-      margin-right: 0;
-    }
-    @include span-columns(12);
+    @include span-columns(4);
+      height: 20rem;
   }
   @include media($mother){
-    &:nth-child(3) { margin-right: 2.3%; }
-    //@include span-columns(3);
-    @include span-columns(12);
   }
   &:hover {
     box-shadow: 0px 2px 0px $pink-salmon;
