--- a/app/styles/partials/_top.scss
+++ b/app/styles/partials/_top.scss
@@ -1,17 +1,11 @@
 section.top {
   position: relative;
+  padding: 2rem 2rem 0 2rem
 }
 
-.intro {
-  @include each-query(width, (100%, 50%, 50%, 50%));
-  p {
-    @include media($grandkid){
-      margin-top: rem(24);
-    }
-    @include media($daughter){
-      margin-top: rem(32);
-    }
-  }
+.intro p {
+  margin-top: 1rem;
+
 }
 
 header {
@@ -20,6 +14,43 @@ header {
   h1 {
     display: inline-block;
   }
+}
+
+header p:first-of-type{
+  margin-bottom: 0;
+}
+
+header li span span {
+  margin: inherit;
+  padding: inherit;
+  font-size: inherit;
+  color: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  display: inline-block;
+}
+
+header li:hover, header li:focus {
+    span span {
+      @include animation(bouncer .15s ease-in-out);
+      @for $i from 1 through 10 {
+        &:nth-child(#{$i}) {
+          animation-delay: .15s * ($i - 1);
+        }
+      }
+    }
+}
+header a {
+  &:active {
+    .contact-username {
+      opacity: .5;
+    }
+  }
+}
+
+@include keyframes(bouncer){
+  from { @include transform(translateY(0px)); }
+  to { @include transform(translateY(-3px));}
 }
 
 .text-column {
